--- a/mikusinski_companion_matrix.ipynb
+++ b/mikusinski_companion_matrix.ipynb
@@ -37,7 +37,13 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "attributes": {
+     "classes": [],
+     "id": "",
+     "n": "2"
+    }
+   },
    "outputs": [],
    "source": [
     "k = 5\n",
@@ -47,7 +53,13 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "attributes": {
+     "classes": [],
+     "id": "",
+     "n": "3"
+    }
+   },
    "outputs": [],
    "source": [
     "sorted_combinations = list(itertools.combinations(range(k),m))"
@@ -60,7 +72,7 @@
     "attributes": {
      "classes": [],
      "id": "",
-     "n": "6"
+     "n": "4"
     }
    },
    "outputs": [],
@@ -68,10 +80,10 @@
     "def sparse_row(combination):\n",
     "    increments = np.identity(m, dtype=int) + combination\n",
     "    wronskians = [(x,'1') for x in increments]\n",
-    "    \n",
+    "\n",
     "    if increments[-1][-1] == k:\n",
     "        wronskians += [wronskian_expansion(list(increments[-1]), i) for i in range(k)]\n",
-    "        \n",
+    "\n",
     "    return defaultdict(lambda: '0', {tuple(a):b for a,b in wronskians})"
    ]
   },
@@ -82,7 +94,7 @@
     "attributes": {
      "classes": [],
      "id": "",
-     "n": "4"
+     "n": "5"
     }
    },
    "outputs": [],
@@ -102,12 +114,12 @@
     "attributes": {
      "classes": [],
      "id": "",
-     "n": "8"
+     "n": "6"
     }
    },
    "outputs": [],
    "source": [
-    "minkusinski_matrix = [[sparse_row(y)[tuple(x)] for x in sorted_combinations] for y in sorted_combinations]"
+    "mikusinski_matrix = [[sparse_row(y)[tuple(x)] for x in sorted_combinations] for y in sorted_combinations]"
    ]
   },
   {
@@ -117,7 +129,7 @@
     "attributes": {
      "classes": [],
      "id": "",
-     "n": "9"
+     "n": "7"
     }
    },
    "outputs": [
@@ -309,36 +321,11 @@
     }
    ],
    "source": [
-    "pd.DataFrame(minkusinski_matrix)"
+    "pd.DataFrame(mikusinski_matrix)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
- "metadata": {
-  "kernelspec": {
-   "display_name": "grant_matrix-fJ9JIOh6",
-   "language": "python",
-   "name": "grant_matrix-fj9jioh6"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.6"
-  }
- },
+ "metadata": {},
  "nbformat": 4,
  "nbformat_minor": 2
 }
